# LoRa-Dashboard

./: .gitignore  README.md  docker-compose.yaml  index.html  setup.sh  setup_mac_dev.sh
.github/workflows/: ci.yml
assets/: index-B3VTGQF-.js  index-Jd6lXDjh.css
backend/: Dockerfile  README.md  requirements.txt  test_db.py
backend/app/: api.py  chart_helper.py  dynamodb.py  main.py  models.py  mqtt_listener.py  websocket.py  websocket_manager.py
docs/: README.md  backend.md  cloud.md  device.md  firmware.md  frontend.md
firmware/: CMakeLists.txt  README.md  pytest_hello_world.py
firmware/main/: CMakeLists.txt  app_main.c  device_meta.c  device_meta.h  hello_world_main.c  json_payload.c  json_payload.h  mqtt.c  mqtt.h  sensor_task.c  sensor_task.h  wifi.c  wifi.h
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/scripts/: color-generator.mjs
frontend/src/: App.jsx  main.jsx
frontend/src/api/: mockTelemetry.js  telemetry.js
frontend/src/components/: Dashboard.jsx  DateSelector.jsx  DeviceSelector.jsx  HamburgerMenu.jsx  LiveStats.jsx  Navigation.jsx  TelemetryChart.jsx
frontend/src/hooks/: useTelemetrySocket.js
frontend/src/styles/: .globals.css  colors-generated.css
frontend/src/utils/: ChartShaper.js  colors-data.js  colors.js  format.js
mqtt/: mosquitto.conf
scripts/: clear_table.py  fake_device.py
